--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <textarea name="message" placeholder="Your Message" required></textarea>
     <button type="submit">Send Message</button>
   </form>
+  <input type="hidden" name="_subject" value="New Miguel Ink Website Message">
+  <input type="hidden" name="_redirect" value="https://siobhantipton97-hue.github.io/miguel-ink/thankyou.html">
 </section>
 
 <!-- LOCATION -->
