--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </section>
 
 <!-- MY WORK -->
-<section class="work-section">
+<section class="work-section" id="work">
   <h2>My Work</h2>
 
   <div class="work-grid">
