--- a/minimalist.html
+++ b/minimalist.html
@@ -20,7 +20,7 @@
 
 <section class="genre-hero">
   <h1>Minimalist</h1>
-  <p>Clean lines. Subtle detail. Timeless minimalist tattoo design.</p>
+  <p>Clean lines. Fine detail. Timeless minimalist tattoo designs.</p>
 </section>
 
 <section class="gallery-section">
