--- a/custom.html
+++ b/custom.html
@@ -25,23 +25,26 @@
   </nav>
 </header>
 
-<!-- PAGE CONTENT -->
-<section class="page-section">
-    <h1 class="page-title">REALISM</h1>
+<!-- PAGE HEADER -->
+<section class="page-header">
+    <h1>REALISM</h1>
+</section>
 
+<!-- GALLERY -->
+<section class="gallery-section">
     <div class="gallery-grid">
-       <img src="images/custom/1000003630.jpg" alt="Custom Tattoo">
-        <img src="images/custom/1000003645.jpg" alt="Custom Tattoo">
-        <img src="images/custom/1000003648.jpg" alt="Custom Tattoo">
-        <img src="images/custom/1000003690.jpg" alt="Custom Tattoo">
-        <img src="images/custom/1000003693.jpg" alt="Custom Tattoo">
-        <img src="images/custom/1000003705.jpg" alt="Custom Tattoo">
-        <img src="images/custom/1000003708.jpg" alt="Custom Tattoo">
+        <img src="images/realism/1000003630.jpg" alt="Realism Tattoo">
+        <img src="images/realism/1000003645.jpg" alt="Realism Tattoo">
+        <img src="images/realism/1000003648.jpg" alt="Realism Tattoo">
+        <img src="images/realism/1000003690.jpg" alt="Realism Tattoo">
+        <img src="images/realism/1000003693.jpg" alt="Realism Tattoo">
+        <img src="images/realism/1000003705.jpg" alt="Realism Tattoo">
+        <img src="images/realism/1000003708.jpg" alt="Realism Tattoo">
     </div>
 </section>
 
 <footer>
-    © 2026 MIGUEL-INK
+    © 2026 MIGUEL ART TATTOO
 </footer>
 
 </body>
