--- a/custom.html
+++ b/custom.html
@@ -41,8 +41,12 @@
         <img src="images/custom/1000003705.jpg" alt="Realism Tattoo">
         <img src="images/custom/1000003708.jpg" alt="Realism Tattoo">
     </div>
-</section>
 
+  <a href="index.html#contact" class="btn">
+    Book This Style
+  </a>
+
+</section>
 <footer>
     © 2026 MIGUEL ART TATTOO
 </footer>
