--- a/custom.html
+++ b/custom.html
@@ -28,6 +28,9 @@
 <!-- PAGE HEADER -->
 <section class="page-header">
     <h1>CUSTOM</h1>
+    <p class="page-description">
+        One-of-a-kind original tattoo designs created in collaboration with you. Personal concepts developed into powerful, custom artwork tailored to your story and style.
+    </p>
 </section>
 
 <!-- GALLERY -->
