--- a/custom.html
+++ b/custom.html
@@ -48,11 +48,26 @@
   <a href="index.html#contact" class="btn">
     Book This Style
   </a>
-
 </section>
-<footer>
-    © 2026 MIGUEL ART TATTOO
-</footer>
 
+<!-- SOCIAL SECTION START -->
+<section class="social-section">
+  <h3>Follow Miguel Ink</h3>
+
+  <div class="social-buttons">
+    <a href="https://www.instagram.com/miguelarttattoo26/" target="_blank" class="btn social-btn">
+      Instagram
+    </a>
+
+    <a href="https://www.facebook.com/profile.php?id=61588315671496" target="_blank" class="btn social-btn">
+      Facebook
+    </a>
+  </div>
+</section>
+<!-- SOCIAL SECTION END -->
+
+<footer>
+  © 2026 MIGUEL ART TATTOO
+</footer>
 </body>
 </html>
