--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Miguel Art Tattoo is a professional tattoo artist in Chiang Mai specialising in realism, spiritual, minimalist and custom tattoo designs. Book your appointment today.">
 <meta name="keywords" content="tattoo artist chiang mai, chiang mai tattoo studio, realism tattoo chiang mai, custom tattoo chiang mai">
 <meta name="author" content="Miguel Art Tattoo">
+  <meta name="google-site-verification" content="I7MK-nOOPf_qbfhtt5Nl-7k3KlXjFcNGMdmsGDuvzXs" />
   <!-- Open Graph -->
 <meta property="og:title" content="Tattoo Artist Chiang Mai | Miguel Art Tattoo">
 <meta property="og:description" content="Professional tattoo artist in Chiang Mai specialising in realism, spiritual and custom tattoo designs.">
