--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       </div>
     </a>
 
-    <a href="spiritual.html" class="work-box">
-      <img src="images/spiritual.jpg" alt="Spiritual Tattoo">
+    <a href="traditional-bamboo.html" class="work-box">
+      <img src="images/traditional-bamboo.jpg" alt="Spiritual Tattoo">
       <div class="overlay">
         <h3>Spiritual</h3>
       </div>
