--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     </a>
 
     <a href="traditional-bamboo.html" class="work-box">
-      <img src="images/traditional-bamboo.jpg" alt="Spiritual Tattoo">
+      <img src="images/spiritual.jpg" alt="Spiritual Tattoo">
       <div class="overlay">
-        <h3>Spiritual</h3>
+        <h3>Traditional/Bamboo</h3>
       </div>
     </a>
 
